alignment fixes, duplication of producer consumer logic for demo & simulation

--- a/public/css/Header.css
+++ b/public/css/Header.css
@@ -35,7 +35,7 @@
 }
 
 /* gpt */
-.search-input {
+#search-input {
     padding: 0.75rem 1.25rem;
     border: 0.5px solid gray;
     border-radius: 20px;
